--- a/webapp/view/LogReg.view.xml
+++ b/webapp/view/LogReg.view.xml
@@ -2,26 +2,27 @@
 	controllerName="sap.ui.demo.walkthrough.controller.LogReg"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
-		xmlns:core="sap.ui.core">
-	
+>
 	<FlexBox
-			width="1200px"
-			alignItems="Center"
-			justifyContent="Center">
-		
-		<Image src="../resources/MHP_login.png" height="280px" class="imgShadow"/>
-
+		width="1200px"
+		alignItems="Center"
+		justifyContent="Center"
+	>
+		<Image
+			src="../resources/MHP_login.png"
+			height="280px"
+			class="imgShadow"
+		/>
 		<FlexBox
-				height="650px"
-				alignItems="Center"
-				justifyContent="Center">
-
+			height="650px"
+			alignItems="Center"
+			justifyContent="Center"
+		>
 			<VBox fitContainer="true">
-			<layoutData>
-				<FlexItemData growFactor="7" />
-			</layoutData>
-			
-			<Input
+				<layoutData>
+					<FlexItemData growFactor="7"/>
+				</layoutData>
+				<Input
 					id="UsernameField"
 					placeholder="{i18n>Username}"
 					valueLiveUpdate="true"
@@ -38,38 +39,39 @@
 					width="450px"
 					class="shadow"
 				/>
-
-			<HBox fitContainer="true" alignItems="Stretch">
-				<layoutData>
-					<FlexItemData growFactor="4" />
-				</layoutData>
-				<VBox alignItems="Center" width="450px">
-					<Button
-						text="{i18n>loginBtn}"
-						press=".onLogIn"
-						class="sapUiSmallMarginTop sapUiLittleMarginBottom shadow roundedBorders"
-						icon="sap-icon://visits"
-						width="400px"
-						type="Transparent"
-					/>
-					<Button
-						text="{i18n>registerBtn}"
-						press=".onRegister"
-						class="sapUiTinyMarginTop shadow roundedBorders"
-						width="400px"
-						type="Transparent"
-					/>
-					<Button
-					text="{i18n>forgotPassBtn}"
-					press=".onForgotPass"
-					class="sapUiTinyMarginTop shadow roundedBorders"
-					width="400px"
-					type="Transparent"
-					/>
-				</VBox>
-			</HBox>
-		</VBox>
+				<HBox fitContainer="true">
+					<layoutData>
+						<FlexItemData growFactor="4"/>
+					</layoutData>
+					<VBox
+						alignItems="Center"
+						width="450px"
+					>
+						<Button
+							text="{i18n>loginBtn}"
+							press=".onLogIn"
+							class="sapUiSmallMarginTop sapUiLittleMarginBottom shadow roundedBorders"
+							icon="sap-icon://visits"
+							width="400px"
+							type="Transparent"
+						/>
+						<Button
+							text="{i18n>registerBtn}"
+							press=".onRegister"
+							class="sapUiTinyMarginTop shadow roundedBorders"
+							width="400px"
+							type="Transparent"
+						/>
+						<Button
+							text="{i18n>forgotPassBtn}"
+							press=".onForgotPass"
+							class="sapUiTinyMarginTop shadow roundedBorders"
+							width="400px"
+							type="Transparent"
+						/>
+					</VBox>
+				</HBox>
+			</VBox>
 		</FlexBox>
-
-	</FlexBox>	
+	</FlexBox>
 </mvc:View>
