Flags in local resources

--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -8,12 +8,12 @@
 			<Bar>
 				<contentRight>
 					<Button
-						icon="https://image.flaticon.com/icons/png/512/197/197374.png"
+						icon="../resources/UK_Flag.png"
 						press=".setEnglishi18n"
 						class="sapUiSmallMarginBeginEnd"
 					/>
 					<Button
-						icon="https://image.flaticon.com/icons/png/512/197/197571.png"
+						icon="../resources/DE_Flag.png"
 						press=".setGermani18n"
 						class="sapUiTinyMarginEnd"
 					/>
