--- a/webapp/view/EditPEG.view.xml
+++ b/webapp/view/EditPEG.view.xml
@@ -115,9 +115,10 @@
 							</TileContent>
 						</GenericTile>
 						<GenericTile
+							id="evaluatorNameTile"
 							class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout borderColourBlue shadow "
 							header="{i18n>evaluatorName}"
-							subheader="{FromUser}"
+							subheader="{FullName}"
 							frameType="Auto"
 						>
 							<TileContent>
@@ -155,9 +156,10 @@
 							</TileContent>
 						</GenericTile>
 						<GenericTile
+							id="projectManagerNameTile"
 							class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout borderColourBlue shadow "
 							header="{i18n>projectManagerName}"
-							subheader="{ProjectManager}"
+							subheader="{FullName}"
 							frameType="TwoByOne"
 						>
 							<TileContent>
